meta info when True.
Added and updated tests.

*****

Added PDF file in cli_search results when 0 < verb < 3.
Added test.
Modified sample.bib to include pdf meta info to an entry.

*****

Added meta argument to bm.export() to include meta information
in output bib file.
Included meta information in tmp file for bm.edit() calls.
Updated mock_home fixture of bm.export() accordingly.
Added meta command-line argument in export CLI.
Added tests.

*****

Re-indented bm.export() function to four spaces.

*****

Modified am.update() to prevent updating entries with freeze flag.
Needs documenting.


*****  Sun Dec 29 22:18:51 CLT 2019 *****

Refactored u.get_author(), replaced short Bool argument
with format string argument, adding ultra-short option (ushort).
Updated docstrings. Fixed and added tests.

*****

Implemented u.AlwaysPassValidator() class, used to display a bottom
toolbar with author and title of current entry on the prompt while
searching.
(PS: I'm pretty sure there must be a smarter way to do this)

Implemented u.KeyWordCompleter() class, which enables completion
by key or bibcode while searching on the prompt.

Implemented u.AutoSuggestKeyCompleter() class adapted to autosuggest
from u.KeyWordCompleter().

Replaced u.search_completer, u.ads_completer WordCompleters with
u.search_keywords, u.ads_keywords lists that contain the kewords
to create the completers.

Updated completer and autosuggester of cli_search() prompt.
Added validator/bottom toolbar to cli_search() prompt.

I have not idea how to pytest the bottom toolbar nor the
auto-completions/auto-suggestions.


*****  Mon Dec 30 09:09:56 CLT 2019  *****

Added pdf_dir config parameter where to store PDF files.
Create u.HOME/pdf/ folder on bm.init() call (default dir for PDFs).
Updated and added tests.


*****  Tue Dec 31 14:23:32 CLT 2019  *****

Modified u.get_authors() 'ushort' format to trim out every character
except letters, spaces, dashes, non-ascii, and parentheses.
Added tests.
